--- a/app/src/components/styles/App.css
+++ b/app/src/components/styles/App.css
@@ -1,3 +1,12 @@
+a {
+  color: inherit;
+}
+
+a:hover {
+  text-decoration: none;
+  color: inherit;
+}
+
 .App-header {
   background-color: #d35400;
   height: 3em;
