--- a/app/src/components/styles/App.css
+++ b/app/src/components/styles/App.css
@@ -39,8 +39,13 @@ a:hover {
   margin: 1em;
 }
 
+.card-body {
+  padding: .1em .5em;
+}
+
 .card-title {
   text-align: center;
+  margin-bottom: 0;
 }
 
 #ingredientsList {
@@ -92,4 +97,33 @@ a:hover {
 /* Utility classes */
 .w-40 {
   width: 40%!important;
+}
+
+/* Media Queries */
+@media only screen and (max-width: 509px) {
+  .card {
+    margin: .8em;
+  }
+}
+
+@media only screen and (max-width: 634px) {
+  .card-title {
+    font-size: .75em;
+  }
+}
+
+@media only screen and (min-width: 634px) and (max-width: 843px) {
+  .card-title {
+    font-size: 1em;
+  }
+}
+
+@media only screen and (min-width: 843px) and (max-width: 1020px) {
+  .card-body {
+    padding: .1em .2em;
+  }
+
+  .card-title {
+    font-size: 1.5em;
+  }
 }
